add logger for http and grpc
